--- a/BreakableEcology/wwwroot/index.html
+++ b/BreakableEcology/wwwroot/index.html
@@ -23,6 +23,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
