--- a/BreakableEcology/wwwroot/index.html
+++ b/BreakableEcology/wwwroot/index.html
@@ -10,7 +10,7 @@
     <base href="/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Montserrat:wght@600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
     <link href="css/app.min.css" rel="stylesheet" />
     <link href="BreakableEcology.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
@@ -19,11 +19,25 @@
 </head>
 
 <body>
-    <div id="app">Загрузка...</div>
+    <div id="app">
+        <div class="preloader">
+            <div>Загрузка</div>
+            <div>
+                <span class="line line-1"></span>
+                <span class="line line-2"></span>
+                <span class="line line-3"></span>
+                <span class="line line-4"></span>
+                <span class="line line-5"></span>
+                <span class="line line-6"></span>
+                <span class="line line-7"></span>
+                <span class="line line-8"></span>
+                <span class="line line-9"></span>
+            </div>
+        </div>
+    </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="js/app.js"></script>
 </body>
-
 </html>
