--- a/BreakableEcology/wwwroot/index.html
+++ b/BreakableEcology/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Одно из направлений экологического общества по подкармливанию диких птиц.">
-    <meta name="theme-color" content="#FFF" />
+    <meta name="theme-color" content="#fff" />
     <title>BreakableEcology</title>
     <base href="/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,5 +39,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="js/app.js"></script>
+    <script src="_content/BlazorInputMask/Main.js"></script>
+    <script src="_content/BlazorInputMask/IMask.js"></script>
 </body>
 </html>
