--- a/BreakableEcology/wwwroot/index.html
+++ b/BreakableEcology/wwwroot/index.html
@@ -38,7 +38,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
     <script src="_content/BlazorInputMask/Main.js"></script>
     <script src="_content/BlazorInputMask/IMask.js"></script>
 </body>
